# rust_snake_game

./: Cargo.toml  README.md  index.html
src/: lib.rs  random.rs  snake.rs
