[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
web-sys = { version = "0.3.57", features = ["Document", "CssStyleDeclaration","HtmlDivElement", "KeyboardEvent", "HtmlElement", "Element", "Window", "console"] }